--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:match*",
-      "destination": "https://netease-green.vercel.app/:match*"
+      "destination": "https://error418-neteasemusicapi.hf.space/:match*"
     }
   ]
 }
